--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 	<header class="toplinks">
 			<a href="#Gmail">Gmail</a>
 			<a href="#Images">Images</a>
-			<a href="#"><img src="images/google-app.png" alt="#" id="google-app" height="22px" width="22px"></a>
+			<a href="#"><img src="./images/google-app.png" alt="#" id="google-app" height="22px" width="22px"></a>
 			<a href="#signin"><button type="button" id="signin">Sign In</button></a>
 	</header>
 
 
 	<div class="logo">
-		<img id="google" src="images/googlelogo.png">	
+		<img id="google" src="./images/googlelogo.png">	
 	</div>
 
 	<div class="search">
