--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 	<header class="toplinks">
 			<a href="#Gmail">Gmail</a>
 			<a href="#Images">Images</a>
-			<a href="#"><img src="https://user-images.githubusercontent.com/40510729/43044271-619abbbc-8dcd-11e8-9158-a05f2b5a128a.png" alt="" id="google-app" height="22px" width="22px"></a>
+			<a href="https://user-images.githubusercontent.com/40510729/43044271-619abbbc-8dcd-11e8-9158-a05f2b5a128a.png"><img src="images/google-app.png" alt="" id="google-app" height="22px" width="22px"></a>
 			<a href="#signin"><button type="button" id="signin">Sign In</button></a>
 	</header>
 
 
 	<div class="logo">
-		<img id="google" src="https://user-images.githubusercontent.com/40510729/43044272-61d0b3f2-8dcd-11e8-9339-8e42c32a5330.png" alt="">	
+		<img id="google" href="https://user-images.githubusercontent.com/40510729/43044272-61d0b3f2-8dcd-11e8-9339-8e42c32a5330.png" src="images/googlelogo.png" alt="">	googlelogo.png
 	</div>
 
 	<div class="search">
