--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 	<div class="logo">
-		<img id="google" src="images/googlelogo.png" alt="">	
+		<img id="google" src="images/googlelogo_color_272x92dp.png" alt="">	
 	</div>
 
 	<div class="search">
