--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 	<header class="toplinks">
 			<a href="#Gmail">Gmail</a>
 			<a href="#Images">Images</a>
-			<a> <img src="images/google-app.png" alt="" id="google-app" height="22px" width="22px"></a>
+			<a> <img src="Images/google-app.png" alt="" id="google-app" height="22px" width="22px"></a>
 			<a href="#signin"><button type="button" id="signin">Sign In</button></a>
 	</header>
 
 
 	<div class="logo">
-		<img id="google" src="images/googlelogo_color_272x92dp.png" alt="">	
+		<img id="google" src="Images/googlelogo_color_272x92dp.png" alt="">	
 	</div>
 
 	<div class="search">
